# values-evolution

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
configs/eval/: metrics.yaml  temporal_splits.yaml
configs/model/: olmo2-7b.yaml  qwen2.5-7b.yaml
configs/serialization/: country_year_doc.yaml  qa_pairs.yaml  respondent_profile.yaml
configs/training/: midtrain.yaml  sft.yaml
crosswalks/: README.md
docs/: data_card.md  eval_plan.md  serialization_decisions.md  training_notes.md
notebooks/: 01_data_audit.ipynb  02_baselines.ipynb
scripts/: build_corpus.py  fetch_data.py  run_eval.py  run_midtrain.py
scripts/hooks/: no_data_commit.py
src/genval/: __init__.py
src/genval/eval/: __init__.py  baselines.py  metrics.py  temporal_eval.py
src/genval/harmonize/: __init__.py  apply_crosswalks.py
src/genval/inference/: __init__.py  generate.py
src/genval/ingest/: __init__.py  ess.py  evs.py  vdem.py  wdi.py
src/genval/schemas/: __init__.py  core.py
src/genval/serialize/: __init__.py  builder.py
src/genval/training/: __init__.py  midtrain.py
src/genval/utils/: __init__.py  hashing.py  logging.py  seed.py
tests/: test_crosswalks.py  test_schemas.py  test_serialization.py  test_temporal_splits.py
